# intership

./: .gitignore  pyproject.toml
ex2/: EX2_Quality.ipynb
ex3/: EX3_Fraud.ipynb
