[tool.poetry]
name = "intership"
version = "0.1.0"
description = "Репозиторий выполнения заданий по стажировке в WB - лето 2024"
authors = ["luzinsan  <luzinsan.a.430-2@e.tusur.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
torchvision = "^0.18.1"
jupyter = "^1.0.0"
notebook = "^7.2.1"
lightning = "^2.2.5"
tensorboard = "^2.17.0"
optuna = "^3.6.1"
plotly = "^5.22.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
opencv-python = "^4.10.0"
timm = "^1.0.7"
UpSetPlot = "^0.9.0"
mlcm = "^0.0.1"
albumentations = "^1.4.10"
pytorch-multilabel-balanced-sampler = "^0.1.3"
wandb = "^0.17.4"
torchsummary = "^1.5.1"


[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
